fix: Change thermostat card justification to stretch for improved layout

--- a/src/App.css
+++ b/src/App.css
@@ -688,7 +688,7 @@ body {
     
     .thermostatCard{
       align-self: center;
-      justify-self: start;
+      justify-self: stretch;
       font-size: 20px;
       max-width: 100dvw;
       height:60px;
